--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/pico.min.css">
     <title>Samet Koçak Dev</title>
 </head>
 <body>
-    <h1>Samet koçak</h1>
-    <p>Hoş geldiniz</p>
+    <nav>
+        <ul>
+          <li><strong>Samet Koçak</strong></li>
+        </ul>
+        <ul>
+          <li><a href="#">Kodlarım</a></li>
+          <li><a href="#">Projelerim</a></li>
+          <li><a href="#">Makaleler</a></li>
+        </ul>
+      </nav>
 </body>
 </html>
