--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
     <title>Samet Koçak Dev</title>
 </head>
 <body>
-    <nav>
+    <nav class="container">
         <ul>
           <li><strong>Samet Koçak</strong></li>
         </ul>
         <ul>
-          <li><a href="#">Kodlarım</a></li>
-          <li><a href="#">Projelerim</a></li>
-          <li><a href="#">Makaleler</a></li>
+          <li><a href="#">Code</a></li>
+          <li><a href="#">Project</a></li>
+          <li><a href="#">artice</a></li>
         </ul>
       </nav>
+      <article class=>
+        <header style="padding-left:250px; padding: 100px;">not:github pages added piocss </header>
+        <p style="padding-left: 250px; padding: 100px;">is page for informational</p>
+      </article>
+
 </body>
 </html>
