--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
           <li><strong>Samet Koçak</strong></li>
         </ul>
         <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Me</a></li>
           <li><a href="#">Code</a></li>
           <li><a href="#">Project</a></li>
           <li><a href="#">artice</a></li>
